--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en"><!-- Basic -->
 <head>
+    
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
@@ -801,9 +802,9 @@
                                 </div>
                                 <div class="col-md-4">
                                     <div class="form-group">
-                                        <ul style="color:#fff">
+                                        <ul>
 
-                                            <li style="font-size:20px;padding:5px"><a class="bi bi-telephone"> </a> 01126149990</li>
+                                            <li style="font-size:20px;padding:5px;color:#fff"><a href="tel : 01118821773"target="_blank" class="bi bi-telephone">  01118821773 </a></li>
                                             <!--<li style="font-size:17px;padding:5px"><a class="bi bi-instagram"> </a></li>-->
                                         </ul>
                                         <!--<div class="help-block with-errors"></div>-->
@@ -812,9 +813,9 @@
                                 </div>
                                 <div class="col-md-4">
                                     <div class="form-group">
-                                        <ul style="color:#fff">
+                                        <ul>
 
-                                            <li style="font-size:20px;padding:5px"><a class="bi bi-telephone"> </a> 01014194537</li>
+                                            <li style="font-size:20px;padding:5px;color:#fff"><a href="tel : 01014154537"target="_blank" class="bi bi-telephone"> 01014194537 </a></li>
                                         </ul>
                                         <!--<div class="help-block with-errors"></div>-->
                                     </div>
