--- a/services.Arabic.html
+++ b/services.Arabic.html
@@ -181,9 +181,9 @@
                     <div class="our-team">
                         <div class="pic"style="height: 300px;">
                             <a class="services-icon" href="#">
-                                <i class="fa fa-camera-retro"></i>
+                                <i class="bi bi-globe"></i>
                             </a>
-                            <h1>تطوير مواقع الكترونية استثنائية </h1>
+                            <h1>إنشاء مواقع الكترونية  </h1>
                             <p>موقعك الإلكتروني هو أفضل من يتحدث عنك ويشرح أفكارك ويطرح منتجاتك. لكن حتى يحدث هذا، يجب أن يكون تصميم موقعك الإلكتروني جذاباً وسلساً في التعامل. </p>
                         </div>
                         <div class="team-content">
@@ -397,13 +397,16 @@
                                         <div class="help-block with-errors"></div>
                                     </div>
                                 </div>
-                                <div class="col-md-4" style="padding-top:20px">
+                                <div class="col-md-4" style="padding-top:10px">
                                     <div class="form-group">
                                         <ul style="padding:20px;text-align:center;display: grid;">
-                                            <li><a target="_blank" href="https://mail.google.com/mail/u/0/#inbox" style="color:#fff;font-size:25px;" class="bi bi-google"></a></li>
-                                            <li><a target="_blank" href="https://www.facebook.com/" style="color:#fff;font-size:25px;" class="bi bi-facebook"></a></li>
-                                            <li><a target="_blank" href="https://www.instagram.com/" style="color:#fff;font-size:25px;" class="bi bi-instagram"></a></li>
-                                            <li><a target="_blank" href="https://web.whatsapp.com/" style="color:#fff;font-size:25px;" class="bi bi-whatsapp"></a></li>
+                                            <li style="font-size:40px;"><a target="_blank" href="https://mail.google.com/mail/u/0/#inbox" style="color:#fff;" class="bi bi-google"></a></li>
+                                            <li style="font-size:40px;"><a target="_blank" href="https://web.facebook.com/profile.php?id=61553920524111" style="color:#fff;" class="bi bi-facebook"></a></li>
+                                            <li style="font-size:40px;"><a target="_blank" href="https://www.instagram.com/marketing.enigma/" style="color:#fff;" class="bi bi-instagram"></a></li>
+                                            <li style="font-size:40px;"><a target="_blank" href="https://web.whatsapp.com/" style="color:#fff;" class="bi bi-whatsapp"></a></li>
+                                            <li style="font-size:33px;"><a target="_blank" href="https://www.snapchat.com/add/marketing.43?share_id=X9hyQ7yJBgI&locale=ar-EG" style="color:#fff;" class="fa fa-snapchat" aria-hidden="true"></a></li>
+
+                                       
                                         </ul>
                                         <div class="help-block with-errors"></div>
                                     </div>
@@ -434,7 +437,7 @@
                                     <div class="form-group">
                                         <ul style="color:#fff">
 
-                                            <li style="font-size:20px;padding:5px"><a class="bi bi-telephone"> </a> 01126149990</li>
+                                            <li style="padding:5px;color:#fff;text-decoration: underline;"><a href="tel:01118821773"target="_blank" class="bi bi-telephone"style="color:#fff;font-size:30px" class="bi bi-telephone">  01118821773 </a></li>
                                             <!--<li style="font-size:17px;padding:5px"><a class="bi bi-instagram"> </a></li>-->
                                         </ul>
                                         <!--<div class="help-block with-errors"></div>-->
@@ -445,7 +448,7 @@
                                     <div class="form-group">
                                         <ul style="color:#fff">
 
-                                            <li style="font-size:20px;padding:5px"><a class="bi bi-telephone"> </a> 01014194537</li>
+                                            <li style="padding:5px;color:#fff;text-decoration: underline;"><a href="tel:01014154537"target="_blank" class="bi bi-telephone"style="color:#fff;font-size:30px" class="bi bi-telephone">  01014194537 </a></li>
                                         </ul>
                                         <!--<div class="help-block with-errors"></div>-->
                                     </div>
