--- a/aboutArb.html
+++ b/aboutArb.html
@@ -94,7 +94,7 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbar-wd">
                     <ul class="navbar-nav">
-                        <li><a class="nav-link active" href="index.arabic.html">الرئسية</a></li>
+                        <li><a class="nav-link active" href="index.arabic.html"style="text-align:right">الرئسية</a></li>
                     </ul>
                 </div>
             </div>
