--- a/services.Arabic.html
+++ b/services.Arabic.html
@@ -109,7 +109,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="title-box">
-                        <h2> أعملنا  </h2>
+                        <h2> خدمات  </h2>
                         <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>-->
                     </div>
                 </div>
