--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 ﻿<!DOCTYPE html>
 <html lang="en"><!-- Basic -->
 <head>
-    
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CE0QYRJG9Q"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-CE0QYRJG9Q');
+</script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
