--- a/index.arabic.html
+++ b/index.arabic.html
@@ -23,19 +23,13 @@
     
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-       <!-- Google tag analetcss(gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-K6W5EL10SN"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-K6W5EL10SN');
-</script>
+   
 </head>
 <body id="home" data-spy="scroll" data-target="#navbar-wd" data-offset="98">
 <!-- Google Tag Manager (noscript) -->
-
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-56TJXWXT"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
  
     <!-- LOADER -->
     <div id="preloader">
@@ -759,5 +753,12 @@
     <script src="js/isotope.min.js"></script>
     <script src="js/images-loded.min.js"></script>
     <script src="js/custom.js"></script>
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-56TJXWXT');</script>
+    <!-- End Google Tag Manager -->
 </body>
 </html>
