--- a/index.arabic.html
+++ b/index.arabic.html
@@ -760,5 +760,14 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-56TJXWXT');</script>
     <!-- End Google Tag Manager -->
+    <!-- Google tag analetcss (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-K6W5EL10SN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-K6W5EL10SN');
+</script>
 </body>
 </html>
