--- a/About.Eng.html
+++ b/About.Eng.html
@@ -138,7 +138,7 @@
                                             <li style="font-size:20px;"><a target="_blank" href="https://mail.google.com/mail/u/0/#inbox" style="color:#fff;" class="bi bi-google"></a></li>
                                             <li style="font-size:20px;"><a target="_blank" href="https://web.facebook.com/profile.php?id=61553920524111" style="color:#fff;" class="bi bi-facebook"></a></li>
                                             <li style="font-size:17px;"><a target="_blank" href="https://www.instagram.com/marketing.enigma/" style="color:#fff;" class="bi bi-instagram"></a></li>
-                                            <li style="font-size:17px;"><a target="_blank" href="https://web.whatsapp.com/" style="color:#fff;" class="bi bi-whatsapp"></a></li>
+                                            <li style="font-size:17px;"><a target="_blank" href="https://wsend.co/201014194537" style="color:#fff;" class="bi bi-whatsapp"></a></li>
                                             <li style="font-size:40px;"><a target="_blank" href="https://www.snapchat.com/add/marketing.43?share_id=X9hyQ7yJBgI&locale=ar-EG" style="color:#fff;" class="fa fa-snapchat" aria-hidden="true"></a></li>
                                         </ul>
                                         <div class="help-block with-errors"></div>
@@ -156,14 +156,14 @@
                                 <div class="col-md-4">
                                     <div class="form-group">
                                         <ul>
-                                            <li style="font-size:18px;padding:5px;color:#fff;text-decoration: underline;"><a href="tel:01118821773"target="_blank" class="bi bi-telephone"style="color:#fff">  01118821773 </a></li>
+                                            <li style="font-size:18px;padding:5px;color:#fff;text-decoration: underline;"><a href="tel:00966534261925"target="_blank" class="bi bi-telephone"style="color:#fff">  00966534261925 </a></li>
                                         </ul>
                                     </div>
                                 </div>
                                 <div class="col-md-4">
                                     <div class="form-group">
                                         <ul>
-                                            <li style="font-size:18px;padding:5px;color:#fff;text-decoration: underline;"><a href="tel:01014154537"target="_blank" class="bi bi-telephone"style="color:#fff"> 01014194537 </a></li>
+                                            <li style="font-size:18px;padding:5px;color:#fff;text-decoration: underline;"><a href="https://wsend.co/201014194537"target="_blank" class="bi bi-whatsapp"style="color:#fff"> 01014194537 </a></li>
                                         </ul>
                                     </div>
                                 </div>
