--- a/aboutArb.html
+++ b/aboutArb.html
@@ -176,25 +176,25 @@
                                          عن شركة إنيجما ماركيتينج
 
                                     </h1>
-                                    <h2 style="color:#fff;text-align:right;font-weight: 150px;">
+                                    <h2 style="color:#fff;text-align:right;">
                                         شركة التسويق الإلكتروني والبرمجة هي شركة تعمل في مجال التسويق الرقمي وتطوير البرمجيات. تهدف هذه الشركات إلى مساعدة العملاء في تحقيق أهدافهم التسويقية وتعزيز وجودهم عبر الإنترنت.
 
                                     </h2>
-                                    <h2 style="color:#fff;text-align:right;font-weight: 150px;">
+                                    <h2 style="color:#fff;text-align:right;">
                                     فيما يتعلق بالتسويق الإلكتروني، تقوم الشركة بتطوير وتنفيذ استراتيجيات التسويق عبر الإنترنت للعملاء. قد تشمل هذه الاستراتيجيات العناصر التالية
                                     </h2>
                                 </div>             
                                 <div class="col-md-4">
                                     <div class="form-group">
                                         <ul style="color:#fff">
-                                            <li style="font-size:18px;padding:5px;color:#fff;text-decoration: underline;"><a href="tel:00966534261925"target="_blank" class="bi bi-telephone"style="color:#fff">  00966534261925 </a></li>
+                                            <li style="font-size:16px;padding:5px;color:#fff;text-decoration: underline;"><a href="tel:00966534261925"target="_blank" class="bi bi-telephone"style="color:#fff">  00966534261925 </a></li>
                                         </ul>
                                     </div>
                                 </div>
                                 <div class="col-md-4">
                                     <div class="form-group">
                                         <ul style="color:#fff">
-                                            <li style="font-size:18px;padding:5px;color:#fff;text-decoration: underline;"><a href="https://wsend.co/201014194537"target="_blank" class="bi bi-whatsapp"style="color:#fff"> 01014194537 </a></li>
+                                            <li style="font-size:16px;padding:5px;color:#fff;text-decoration: underline;"><a href="tel:01014194537" target="_blank" class="bi bi-telephone" style="color:#fff"> 01014194537 </a></li>
                                         </ul>
                                     </div>
                                 </div>
