--- a/About.Eng.html
+++ b/About.Eng.html
@@ -67,14 +67,12 @@
                             <div class="col-lg-6 col-md-12 col-sm-12">
                                 <h1 style="text-align: center;"> The most professional digital marketing services</h1>
                                 <p>
-                                    Focus Points for Advertising, Digital Marketing Solutions, and Information 
-                                    Technology is a leading platform in creating electronic stores, applications,
-                                     and e-commerce supporting services. It provides the ideal solution for business 
-                                     owners and companies who wish to obtain all digital marketing services to support 
-                                     their products and services. We are also proud of our excellence in the field of 
-                                     integrated advertising campaigns and achieving the best results with the help of a 
-                                     qualified team with experience and using the latest innovative marketing methods 
-                                     and tools.
+                                    Enima marketing Advertising, Digital Marketing Solutions, and Information Technology is a leading platform
+                                    in creating electronic stores, applications, and e-commerce supporting services. It provides the ideal
+                                    solution for business owners and companies who wish to obtain all digital marketing services to support 
+                                    their products and services. We are also proud of our excellence in the field of integrated advertising 
+                                    campaigns and achieving the best results with the help of a qualified team with experience and using the
+                                    latest innovative marketing methods and tools.
                                 </p>
                                 <p>
                                     Based on our belief in the increasing importance of digital marketing in business 
