--- a/index.html
+++ b/index.html
@@ -117,20 +117,14 @@
                             <div class="col-lg-6 col-md-6 col-sm-12">
                                 <h1> Introduction :</h1>
                                 <p>
-                                    Focus Points for Advertising, Digital Marketing Solutions, and Information Technology is a
-                                    leading platform in creating electronic stores, applications, and e-commerce supporting services.
-                                    It provides the ideal solution for business owners and companies who wish to obtain all digital
-                                    marketing services to support their products and services. We are also proud of our excellence in
-                                    the field of integrated advertising campaigns and achieving the best results with the help of a
-                                    qualified team with experience and using the latest innovative marketing methods and tools.
+                                    Enima marketing Advertising, Digital Marketing Solutions, and Information Technology is a leading platform
+                                    in creating electronic stores, applications, and e-commerce supporting services. It provides the ideal
+                                    solution for business owners and companies who wish to obtain all digital marketing services to support
+                                    their products and services. We are also proud of our excellence in the field of integrated advertising 
+                                    campaigns and achieving the best results with the help of a qualified team with experience and using the 
+                                    latest innovative marketing methods and tools.
                                 </p>
-                                <p>
-                                    Based on our belief in the increasing importance of digital marketing in business development and
-                                    achieving the sales goals that our customers aspire to, Focus Points seeks to provide an integrated
-                                    set of services with a high degree of proficiency and efficiency with the help of a team of professionals
-                                    and experienced people who are able to reach the target audience in the appropriate way and develop
-                                    marketing and advertising ideas. Creative.
-                                </p>
+                              
                                 <a href="About.Eng.html" class="new-btn-d br-2" style="font-size:17px">Read More</a>
                             </div>
                             <div class="col-md-6 col-sm-12">
