--- a/About.Eng.html
+++ b/About.Eng.html
@@ -7,8 +7,8 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>ENIGMA MARKETING</title>
-    <link rel="shortcut icon" href="images/logo/your-logo.png.jpg" type="image/x-icon">
+    <title>About Digital marketing Pro</title>
+    <link rel="shortcut icon" href="images/logo/logo.nav.jpg" type="image/x-icon">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/pogo-slider.min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -36,7 +36,7 @@
     <header class="top-header">
         <nav class="navbar header-nav navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand swing" href="index.html"><img style="width: 120px; height: 60px; margin-top: -14px;box-shadow: 5px 5px 5px #63c7bd;" src="images/logo/your-logo.png.jpg" alt="image"></a>
+                <a class="navbar-brand swing" href="index.html"><img style="width: 120px; height: 60px; margin-top: -14px;box-shadow:  1px 1px 5px #fca901" src="images/logo/logo.nav.jpg" alt="image"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-wd" aria-controls="navbar-wd" aria-expanded="false" aria-label="Toggle navigation">
                     <span></span>
                     <span></span>
@@ -91,15 +91,15 @@
                                 <div class="pricingTable">
 
                                     <h1 style="color:darkred">PROJECTS</h1>
-                                    <h3 style="color: #1b5354;">GOLDENINN :</h3>
+                                    <h3 style="color: #bb8008;">GOLDENINN :</h3>
                                     <p>DEVELOP FULL STATIC WEBSITE FOR TRAVEL COMPANY FRONT END</p>
-                                    <h3 style="color: #1b5354;">TRABZON FOR TOURISM :</h3>
+                                    <h3 style="color: #bb8008;">TRABZON FOR TOURISM :</h3>
                                     <p>DEVELOP FULL STATIC WEBSITE FOR TRAVEL COMPANY FRONT END</p>
-                                    <h3 style="color: #1b5354;">RAHAL INTERNATIONAL TRAVEL</h3>
+                                    <h3 style="color: #bb8008;">RAHAL INTERNATIONAL TRAVEL</h3>
                                     <p>DEVELOP FULL STATIC WEBSITE FOR TRAVEL COMPANY FRONT END</p>
-                                    <h3 style="color: #1b5354;">GOLDEN_FRAGRANCE:</h3>
+                                    <h3 style="color: #bb8008;">GOLDEN_FRAGRANCE:</h3>
                                     <p>DEVELOP FULL STATIC WEBSITE FOR TRAVEL COMPANY FRONT END</p>
-                                    <h3 style="color: #1b5354;">4STECH:</h3>
+                                    <h3 style="color: #bb8008;">4STECH:</h3>
                                     <p>ERP SYSTEM FRONT END</p>
                                 </div>
                             </div>
@@ -118,26 +118,29 @@
                     </div>
                 </div>
             </div>
-            <div class="row"style="background: #1b5354;">
+            <div class="row">
                 <div class="col-lg-12 col-xs-12">
                     <div class="contact-block">
                         <form id="contactForm">
                             <div class="row">
                                 <div class="col-md-4" style="padding-top:30px">
-                                    <h2 style="color:#fff;font-size: x-large;">About Enigma Marketing Company </h2>
-                                    <h1 style="color:darkgray;font-size:20px"> E-Marketing and Programming Company is a company working in the field of digital marketing and software development. These companies aim to help clients achieve their marketing goals and enhance their online presence.</h1>
-                                    <h1 style="color:darkgray;font-size:20px">In terms of e-marketing, the company develops and implements online marketing strategies for clients. These strategies may include the following elements </h1>
+                                    <h2 style="color:#fff;font-size: x-large;"> Digital Marketing Pro Company </h2>
+                                    <h1 style="color:#000;font-size:20px"> E-Marketing and Programming Company is a company working in the field of digital marketing and software development. These companies aim to help clients achieve their marketing goals and enhance their online presence.
+                                        In terms of e-marketing, the company develops and implements online marketing strategies for clients. These strategies may include the following elements</h1>
                                     <div class="col-lg-6 col-md-6 col-sm-12">
-                                  </div>
+                                        <a href="About.Eng.html" style="font-size:20px;color: #fff;text-align: left;">
+                                            <span style="text-decoration: underline;color: #fff;"> READ MORE</span>
+                                        </a>
+                                    </div>
                                 </div>
                                 <div class="col-md-4" style="padding-top:20px">
                                     <div class="form-group">
                                         <ul style="padding:20px;text-align:center">
-                                            <li style="font-size:20px;"><a target="_blank" href="https://mail.google.com/mail/u/0/#inbox" style="color:#fff;" class="bi bi-google"></a></li>
-                                            <li style="font-size:20px;"><a target="_blank" href="https://web.facebook.com/profile.php?id=61553920524111" style="color:#fff;" class="bi bi-facebook"></a></li>
-                                            <li style="font-size:17px;"><a target="_blank" href="https://www.instagram.com/marketing.enigma/" style="color:#fff;" class="bi bi-instagram"></a></li>
-                                            <li style="font-size:17px;"><a target="_blank" href="https://wsend.co/201014194537" style="color:#fff;" class="bi bi-whatsapp"></a></li>
-                                            <li style="font-size:40px;"><a target="_blank" href="https://www.snapchat.com/add/marketing.43?share_id=X9hyQ7yJBgI&locale=ar-EG" style="color:#fff;" class="fa fa-snapchat" aria-hidden="true"></a></li>
+                                            <li style="font-size:20px;"><a target="_blank" href="https://mail.google.com/mail/u/0/#inbox"class="bi bi-google"></a></li>
+                                            <li style="font-size:20px;"><a target="_blank" href="https://web.facebook.com/profile.php?id=61553920524111"class="bi bi-facebook"></a></li>
+                                            <li style="font-size:17px;"><a target="_blank" href="https://www.instagram.com/marketing.enigma/"class="bi bi-instagram"></a></li>
+                                            <li style="font-size:17px;"><a target="_blank" href="https://wsend.co/201014194537"class="bi bi-whatsapp"></a></li>
+                                            <li style="font-size:40px;"><a target="_blank" href="https://www.snapchat.com/add/marketing.43?share_id=X9hyQ7yJBgI&locale=ar-EG"class="fa fa-snapchat" aria-hidden="true"></a></li>
                                         </ul>
                                         <div class="help-block with-errors"></div>
                                     </div>
@@ -145,7 +148,7 @@
                                 <div class="col-md-4">
                                     <div class="form-group" style="padding-top:20px">
                                         <div class="form-group" style="padding-top:20px">
-                                            <img style="width:90%;height:55vh;box-shadow: 5px 5px 5px #63c7bd;" src="images/logo/your-logo.png.jpg">
+                                            <img style="width:90%;height:55vh;box-shadow: 0px 1px 2px #fca901" src="images/logo/logo.jpg">
                                             <div class="help-block with-errors"></div>
                                         </div>
                                         <div class="help-block with-errors"></div>
@@ -154,14 +157,14 @@
                                 <div class="col-md-4">
                                     <div class="form-group">
                                         <ul>
-                                            <li style="font-size:16px;padding:5px;color:#fff;text-decoration: underline;"><a href="tel:00966534261925"target="_blank" class="bi bi-telephone"style="color:#fff">  00966534261925 </a></li>
+                                            <li style="font-size:16px;padding:5px;text-decoration: underline;"><a href="tel:01118636056" target="_blank" class="bi bi-telephone">  01118636056 </a></li>
                                         </ul>
                                     </div>
                                 </div>
                                 <div class="col-md-4">
                                     <div class="form-group">
                                         <ul>
-                                            <li style="font-size:16px;padding:5px;color:#fff;text-decoration: underline;"><a href="tel:01014194537" target="_blank" class="bi bi-telephone" style="color:#fff"> 01014194537 </a></li>
+                                            <li style="font-size:16px;padding:5px;text-decoration: underline;"><a href="tel:01014194537" target="_blank" class="bi bi-telephone"> 01014194537 </a></li>
                                         </ul>
                                     </div>
                                 </div>
