--- a/index.arabic.html
+++ b/index.arabic.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>ENIGMA MARKETING</title>
-    <meta name="keywords" content=" تسويق الكتروني , ميديا باير , تصميم مواقع , تصميم جرافيك , دعاية واعلان , خطة تسويقية , شركة تسويق , شركة برمجة  ">
+    <title>ديجيتال ماركيتينج برو</title>
+    <meta name="keywords" content=" تسويق الكتروني , ميديا باير , تصميم مواقع , تصميم جرافيك , دعاية واعلان , خطة تسويقية , شركة تسويق,ديجيتال ماركيتينج برو , شركة برمجة  ">
     <meta name="description" content="تصميم وتطوير المواقع الإلكترونية ,التسويق عبر وسائل التواصل الاجتماعي ,
     التسويق عبر البريد الإلكتروني، تسويق المحتوى">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="images/logo/your-logo.png.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="images/logo/logo.nav.jpg" type="image/x-icon">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/pogo-slider.min.css">
     <link rel="stylesheet" href="css/responsive.css">
@@ -18,8 +18,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <style>
         .panel{
-            border: 1px solid #63c7bd;
+            border: 1px solid #fca901   ;
         }
+        i{
+        color: #bb8008;
+     }
  </style>
         <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -42,7 +45,7 @@
     <header class="top-header">
         <nav class="navbar header-nav navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand" href="index.html"><img style="width: 120px; height: 60px; margin-top: -14px;box-shadow: 5px 5px 5px #63c7bd;" src="images/logo/your-logo.png.jpg" alt="image"></a>
+                <a class="navbar-brand" href="index.html"><img style="width: 120px; height: 60px; margin-top: -14px;box-shadow:  1px 1px 5px #fca901" src="images/logo/logo.nav.jpg" alt="image"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-wd" aria-controls="navbar-wd" aria-expanded="false" aria-label="Toggle navigation">
                     <span></span>
                     <span></span>
@@ -74,14 +77,14 @@
                     <div class="pogoSlider-slide" data-transition="fade" data-duration="1500" style="background-image: url(images/slider/20.jpg); ">
                         <div class="lbox-caption pogoSlider-slide-element">
                             <div class="lbox-details">
-                                <h1 style="color:cadetblue;background:rgba(0,0,0,0.5);font-size:xx-large;"> اكتشف عملنا</h1>
+                                <h1 style="color:#fca901;background:rgba(0,0,0,0.5);font-size:xx-large;"> اكتشف عملنا</h1>
                             </div>
                         </div>
                     </div>
                     <div class="pogoSlider-slide" data-transition="fade" data-duration="1500" style="background-image:url(images/slider/220.jpg);">
                         <div class="lbox-caption pogoSlider-slide-element">
                             <div class="lbox-details">
-                                <h1 style="color:cadetblue;background:rgba(0,0,0,0.5);font-size:xx-large;">الانتشار في جميع أنحاء العالم</h1>
+                                <h1 style="color:#fca901;background:rgba(0,0,0,0.5);font-size:xx-large;">الانتشار في جميع أنحاء العالم</h1>
                             </div>
                         </div>
 
@@ -89,7 +92,7 @@
                     <div class="pogoSlider-slide" data-transition="fade" data-duration="1500" style="background-image:url(images/slider/70.jpg);">
                         <div class="lbox-caption pogoSlider-slide-element">
                             <div class="lbox-details">
-                                <h1 style="color:cadetblue;background:rgba(0,0,0,0.5);font-size:xx-large;">تسويق اللغز </h1>
+                                <h1 style="color:#fca901;background:rgba(0,0,0,0.5);font-size:xx-large;"> ديجيتال ماركيتينج برو </h1>
                             </div>
                         </div>
 
@@ -115,11 +118,11 @@
                         <div class="row align-items-center about-main-info">
                             <div class="col-md-6 col-sm-12">
                                 <div class="pricingTable">
-                                    <img style="width:70%;height:50%;box-shadow: -5px 5px 5px #63c7bd;" src="images/logo/1.png">
+                                    <img style="width:100%;height:400px;box-shadow: 0px 1px 2px #fca901;" src="images/logo/1.png">
                                 </div>
                             </div>
                             <div style="text-align:right" class="col-lg-6 col-md-6 col-sm-12">
-                                <p style="font-size: 18px;color:#1b5354;">
+                                <p style="font-size: 20px;color:#a57004;">
                                     نقاط التركيز للدعاية والاعلان وحلول التسويق الرقمي وتقنية المعلومات منصة رائدة في إنشاء المتاجر والتطبيقات الإلكترونية والخدمات المساندة للتجارة الالكترونية. تقدم الحل الأمثل لأصحاب الأعمال والشركات الراغبين بالحصول على كافة خدمات التسويق الرقمي لدعم منتجاتهم وخدماتهم، كما و نفتخر بتميزنا في مجال الحملات الإعلانية المتكاملة وتحقيق أفضل النتائج بمساعدة فريق مؤهل من ذوي الخبرات وباستخدام أحدث أساليب وأدوات التسويق المبتكرة.
                                 </p>
                                
@@ -138,7 +141,7 @@
     <div id="container" class="container">
         <div class="row">
             <div class="title-box col-md-12 col-sm-12">
-                <h2 class="" style="text-align:center;font-size: xx-large;color: #1b5354;">اسئلة شائعة</h2>
+                <h2>اسئلة شائعة</h2>
                 <button class="accordion bi bi-caret-down-fill">ما هي أنواع إعلانات جوجل أدورد وحملات جوجل الإعلانية ؟   </button>
                 <div class="panel">
                     <h3>تختلف أنواع إعلانات جوجل حسب الهدف منها وتتمثل فيما يلي </h3>
@@ -369,10 +372,10 @@
                     </div>
                 </div>
                 <br>
-                <div class="col-md-12 col-sm-12" style="padding-top:10px">
+                <div class="col-md-12 col-sm-12" style="padding-top:10px;">
                     <div class="our-team">
 
-                        <a href="services.Arabic.html" class="new-btn-d br-2" style="font-size:20px;color:#fff;text-align:right;background:#1b5354;border-radius:15px">
+                        <a href="services.Arabic.html" class="new-btn-d br-2" style="font-size:20px;color:#fff;text-align:right;background:#bb8008">
                             المزيد من المعلومات
                         </a>
 
@@ -480,7 +483,7 @@
     </div>
     <div class="col-md-12 col-sm-12">
         <div class="our-team">
-            <a href="project photoshop.html" class="" style="font-size:20px;padding:7px;color:#fff;text-align:right;background:#1b5354;border-radius:15px">
+            <a href="project photoshop.html" class="new-btn-d br-2" style="font-size:20px;color:#fff;background:#bb8008">
                 المزيد من المعلومات
             </a>
         </div>
@@ -618,7 +621,7 @@
                 <div class="col-lg-12">
                     <div class="title-box">
                         <h2> عملاء جدد </h2>
-                        <p style="text-align:center;font-size:25px;color:rgb(29, 98, 100)"> دعونا نرحب بعملاء شهر نوفمبر </p>
+                        <p style="text-align:center;font-size:25px;"> دعونا نرحب بعملاء شهر نوفمبر </p>
                     </div>
                 </div>
             </div>
@@ -782,11 +785,10 @@
                 <div class="col-lg-12">
                     <div class="title-box">
                         <h2> اتصل بنا </h2>
-                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>-->
                     </div>
                 </div>
             </div>
-            <div class="row" style="background: #1b5354;">
+            <div class="row">
                 <div class="col-lg-12 col-xs-12">
                     <div class="contact-block">
                         <form id="contactForm">
@@ -794,7 +796,7 @@
                                 <div class="col-md-4">
                                     <div class="form-group" style="padding-top:20px">
                                         <div class="form-group" style="padding-top:20px">
-                                            <img style="width:90%;height:55vh;box-shadow: 5px 5px 5px #63c7bd;" src="images/logo/your-logo.png.jpg">
+                                            <img style="width:100%;height:55vh;box-shadow: 0px 1px 2px #fca901;"src="images/logo/logo.jpg">
                                             <div class="help-block with-errors"></div>
                                         </div>
                                         <div class="help-block with-errors"></div>
@@ -802,42 +804,36 @@
                                 </div>
                                 <div class="col-md-4" style="padding-top:10px">
                                     <div class="form-group">
-                                        <ul style="padding:20px;text-align:center;display: grid;">
-                                            <li style="font-size:40px;"><a target="_blank" href="https://mail.google.com/mail/u/0/#inbox" style="color:#fff;" class="bi bi-google"></a></li>
-                                            <li style="font-size:40px;"><a target="_blank" href="https://web.facebook.com/profile.php?id=61553920524111" style="color:#fff;" class="bi bi-facebook"></a></li>
-                                            <li style="font-size:40px;"><a target="_blank" href="https://www.instagram.com/marketing.enigma/" style="color:#fff;" class="bi bi-instagram"></a></li>
-                                            <li style="font-size:40px;"><a target="_blank" href="https://wsend.co/201014194537" style="color:#fff;" class="bi bi-whatsapp"></a></li>
-                                            <li style="font-size:33px;"><a target="_blank" href="https://www.snapchat.com/add/marketing.43?share_id=X9hyQ7yJBgI&locale=ar-EG" style="color:#fff;" class="fa fa-snapchat" aria-hidden="true"></a></li>
-
-
+                                        <ul style="padding:10px;text-align:center;display: grid;">
+                                            <li style="font-size:40px;"><a target="_blank" href="https://mail.google.com/mail/u/0/#inbox"class="bi bi-google"></a></li>
+                                            <li style="font-size:40px;"><a target="_blank" href="https://web.facebook.com/profile.php?id=61553920524111"class="bi bi-facebook"></a></li>
+                                            <li style="font-size:40px;"><a target="_blank" href="https://www.instagram.com/marketing.enigma/"class="bi bi-instagram"></a></li>
+                                            <li style="font-size:40px;"><a target="_blank" href="https://wsend.co/201014194537"class="bi bi-whatsapp"></a></li>
+                                            <li style="font-size:33px;"><a target="_blank" href="https://www.snapchat.com/add/marketing.43?share_id=X9hyQ7yJBgI&locale=ar-EG"class="fa fa-snapchat" aria-hidden="true"></a></li>
                                         </ul>
-                                        <div class="help-block with-errors"></div>
                                     </div>
                                 </div>
-
                                 <div class="col-md-4" style="padding-top:30px;text-align:center">
-                                    <h1 style="color:#fff">
-                                        عن شركة إنيجما ماركيتينج
-                                    </h1>
-                                    <h2 style="color:#fff;text-align:right">
+                                    <h1>      عن ديجيتال ماركيتينج برو  </h1>
+                                    <h2 style="text-align:right">
                                         شركة التسويق الإلكتروني والبرمجة هي شركة تعمل في مجال التسويق الرقمي وتطوير البرمجيات. تهدف هذه الشركات إلى مساعدة العملاء في تحقيق أهدافهم التسويقية وتعزيز وجودهم عبر الإنترنت.
 
                                     </h2>
-                                    <h2 style="color:#fff;text-align:right">
+                                    <h2 style="text-align:right">
                                         فيما يتعلق بالتسويق الإلكتروني، تقوم الشركة بتطوير وتنفيذ استراتيجيات التسويق عبر الإنترنت للعملاء. قد تشمل هذه الاستراتيجيات العناصر التالية
                                     </h2>
                                     <div style="text-align:right" class="col-lg-6 col-md-6 col-sm-12">
-                                        <a href="aboutArb.html" style="font-size:20px;color: #fff;text-align: right;">
-                                            <span style="text-decoration: underline;color: #fff;"> أقراء اكثر </span>
+                                        <a href="aboutArb.html" style="font-size:20px;text-align: right;">
+                                            <span style="text-decoration: underline"> أقراء اكثر </span>
                                         </a>
                                     </div>
                                 </div>
 
                                 <div class="col-md-4">
                                     <div class="form-group">
-                                        <ul style="color:#fff">
+                                        <ul>
 
-                                            <li style="font-size:16px;padding:5px;color:#fff;text-decoration: underline;"><a href="tel:00966534261925" target="_blank" class="bi bi-telephone" style="color:#fff">  00966534261925 </a></li>
+                                            <li style="font-size:16px;padding:5px;text-decoration: underline;"><a href="tel:01118636056" target="_blank" class="bi bi-telephone">  01118636056 </a></li>
                                             <!--<li style="font-size:17px;padding:5px"><a class="bi bi-instagram"> </a></li>-->
                                         </ul>
                                         <!--<div class="help-block with-errors"></div>-->
@@ -846,9 +842,9 @@
                                 </div>
                                 <div class="col-md-4">
                                     <div class="form-group">
-                                        <ul style="color:#fff">
+                                        <ul>
 
-                                            <li style="font-size:16px;padding:5px;color:#fff;text-decoration: underline;"><a href="tel:01014194537" target="_blank" class="bi bi-telephone" style="color:#fff"> 01014194537 </a></li>
+                                            <li style="font-size:16px;padding:5px;text-decoration: underline;"><a href="tel:01014194537" target="_blank" class="bi bi-telephone"> 01014194537 </a></li>
                                         </ul>
                                         <!--<div class="help-block with-errors"></div>-->
                                     </div>
