--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
 </head>
 <body id="home" data-spy="scroll" data-target="#navbar-wd" data-offset="98">
 
-    <!-- LOADER -->
+    <!-- LOADER
     <div id="preloader">
         <div class="loader">
             <img src="images/preloader.gif" alt="" />
         </div>
-    </div>
+    </div> -->
     <header class="top-header">
         <nav class="navbar header-nav navbar-expand-lg">
             <div class="container">
