--- a/index.arabic.html
+++ b/index.arabic.html
@@ -34,12 +34,12 @@
                 height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
     <!-- End Google Tag Manager (noscript) -->
-    <!-- LOADER -->
+    <!-- LOADER 
     <div id="preloader">
         <div class="loader">
             <img src="images/preloader.gif" alt="" />
         </div>
-    </div>
+    </div>-->
     <!-- END LOADER -->
     <!-- Start header -->
     <header class="top-header">
