--- a/index.arabic.html
+++ b/index.arabic.html
@@ -74,14 +74,14 @@
             <div class="row">
                 <div class="pogoSlider" id="js-main-slider">
 
-                    <div class="pogoSlider-slide" data-transition="fade" data-duration="1500" style="background-image: url(images/slider/20.jpg); ">
+                    <div class="pogoSlider-slide" data-transition="fade" data-duration="1500" style="background-image: url(images/slider/70.jpg); ">
                         <div class="lbox-caption pogoSlider-slide-element">
                             <div class="lbox-details">
                                 <h1 style="color:#fca901;background:rgba(0,0,0,0.5);font-size:xx-large;"> اكتشف عملنا</h1>
                             </div>
                         </div>
                     </div>
-                    <div class="pogoSlider-slide" data-transition="fade" data-duration="1500" style="background-image:url(images/slider/220.jpg);">
+                    <div class="pogoSlider-slide" data-transition="fade" data-duration="1500" style="background-image:url(images/slider/11.jpeg);">
                         <div class="lbox-caption pogoSlider-slide-element">
                             <div class="lbox-details">
                                 <h1 style="color:#fca901;background:rgba(0,0,0,0.5);font-size:xx-large;">الانتشار في جميع أنحاء العالم</h1>
@@ -89,7 +89,7 @@
                         </div>
 
                     </div>
-                    <div class="pogoSlider-slide" data-transition="fade" data-duration="1500" style="background-image:url(images/slider/70.jpg);">
+                    <div class="pogoSlider-slide" data-transition="fade" data-duration="1500" style="background-image:url(images/slider/13.jpeg);">
                         <div class="lbox-caption pogoSlider-slide-element">
                             <div class="lbox-details">
                                 <h1 style="color:#fca901;background:rgba(0,0,0,0.5);font-size:xx-large;"> ديجيتال ماركيتينج برو </h1>
@@ -857,6 +857,9 @@
             </div>
         </div>
     </div>
+    <a class="whats-app" href="#" target="_blank">
+        <i class="bi bi-whatsapp what"  href="https://wsend.co/201014194537"></i>
+    </a>
     <a href="#" id="scroll-to-top" class="new-btn-d br-2"><i class="fa fa-angle-up"></i></a>
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
