--- a/aboutArb.html
+++ b/aboutArb.html
@@ -208,6 +208,9 @@
             </div>
         </div>
     </div>
+    <a class="whats-app" href="#" target="_blank">
+        <i class="bi bi-whatsapp what"  href="https://wsend.co/201014194537"></i>
+    </a>
     <a href="#" id="scroll-to-top" class="new-btn-d br-2"><i class="fa fa-angle-up"></i></a>
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
