--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
      i{
         color: #bb8008;
      }
+
+    
     </style>
 </head>
 <body id="home" data-spy="scroll" data-target="#navbar-wd" data-offset="98">
@@ -84,14 +86,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="pogoSlider-slide" data-transition="fade" data-duration="1500" style="background-image: url(images/slider/20.jpg); ">
+                    <div class="pogoSlider-slide" data-transition="fade" data-duration="1500" style="background-image: url(images/slider/11.jpeg); ">
                         <div class="lbox-caption pogoSlider-slide-element">
                             <div class="lbox-details">
                                 <h1 style="color:#fca901;background:rgba(0,0,0,0.5);font-size:x-large;">DISCOVER OUR WORK</h1>
                             </div>
                         </div>
                     </div>
-                    <div class="pogoSlider-slide" data-transition="fade" data-duration="1500" style="background-image:url(images/slider/220.jpg);">
+                    <div class="pogoSlider-slide" data-transition="fade" data-duration="1500" style="background-image:url(images/slider/13.jpeg);">
                         <div class="lbox-caption pogoSlider-slide-element">
                             <div class="lbox-details">
                                 <h1 style="color:#fca901;background:rgba(0,0,0,0.5);font-size:x-large;"> Spreading World wide</h1>
@@ -788,6 +790,9 @@
         </div>
     </div>
     <!-- End Contact -->
+    <a class="whats-app" href="#" target="_blank">
+        <i class="bi bi-whatsapp what"  href="https://wsend.co/201014194537"></i>
+    </a>
     <a href="#" id="scroll-to-top" class="new-btn-d br-2"><i class="fa fa-angle-up"></i></a>
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
