--- a/services.Arabic.html
+++ b/services.Arabic.html
@@ -383,8 +383,8 @@
             </div>
         </div>
     </div>
-    <a class="whats-app" href="#" target="_blank">
-        <i class="bi bi-whatsapp what"  href="https://wsend.co/201014194537"></i>
+    <a class="whats-app"href="https://wsend.co/201014194537" target="_blank">
+        <i class="bi bi-whatsapp what"></i>
     </a>
     <a href="#" id="scroll-to-top" class="new-btn-d br-2"><i class="fa fa-angle-up" style="color: #fff;"></i></a>
 
