--- a/index.arabic.html
+++ b/index.arabic.html
@@ -857,8 +857,8 @@
             </div>
         </div>
     </div>
-    <a class="whats-app" href="#" target="_blank">
-        <i class="bi bi-whatsapp what"  href="https://wsend.co/201014194537"></i>
+    <a class="whats-app"href="https://wsend.co/201014194537" target="_blank">
+        <i class="bi bi-whatsapp what"></i>
     </a>
     <a href="#" id="scroll-to-top" class="new-btn-d br-2"><i class="fa fa-angle-up"></i></a>
     <script src="js/jquery.min.js"></script>
@@ -876,24 +876,6 @@
     <script src="js/isotope.min.js"></script>
     <script src="js/images-loded.min.js"></script>
     <script src="js/custom.js"></script>
-    <!-- Google Tag Manager -->
-    <script>
-    (function (w, d, s, l, i) {
-        w[l] = w[l] || []; w[l].push({
-            'gtm.start':
-                new Date().getTime(), event: 'gtm.js'
-        }); var f = d.getElementsByTagName(s)[0],
-            j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-                'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-56TJXWXT');</script>
-    <!-- End Google Tag Manager -->
-    <!-- Google tag analetcss (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-K6W5EL10SN"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-        gtag('config', 'G-K6W5EL10SN');
-    </script>
+    
 </body>
 </html>
