--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 </head>
 <body id="home" data-spy="scroll" data-target="#navbar-wd" data-offset="98">
 
-    <!-- LOADER
+    <!-- LOADER -->
     <div id="preloader">
         <div class="loader">
             <img src="images/preloader.gif" alt="" />
         </div>
-    </div> -->
+    </div> 
     <header class="top-header">
         <nav class="navbar header-nav navbar-expand-lg">
             <div class="container">
@@ -790,8 +790,8 @@
         </div>
     </div>
     <!-- End Contact -->
-    <a class="whats-app" href="#" target="_blank">
-        <i class="bi bi-whatsapp what"  href="https://wsend.co/201014194537"></i>
+    <a class="whats-app"href="https://wsend.co/201014194537" target="_blank">
+        <i class="bi bi-whatsapp what"></i>
     </a>
     <a href="#" id="scroll-to-top" class="new-btn-d br-2"><i class="fa fa-angle-up"></i></a>
     <script src="js/jquery.min.js"></script>
