--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 </head>
 <body id="home" data-spy="scroll" data-target="#navbar-wd" data-offset="98">
 
-    <!-- LOADER -->
+    <!-- LOADER 
     <div id="preloader">
         <div class="loader">
             <img src="images/preloader.gif" alt="" />
         </div>
-    </div> 
+    </div> -->
     <header class="top-header">
         <nav class="navbar header-nav navbar-expand-lg">
             <div class="container">
@@ -120,7 +120,7 @@
                     <div class="col-lg-12 col-md-12 col-sm-12">
                         <div class="row align-items-center about-main-info">
                             <div class="col-lg-6 col-md-6 col-sm-12">
-                                <p style="font-size: 18px;color:#a57004;">
+                                <p style="font-size: 17px;color:#a57004;">
                                     Focus Points for Advertising, Digital Marketing Solutions, and Information Technology is a leading platform in creating electronic stores, applications, and e-commerce supporting services. It provides the ideal solution for business owners and companies who wish to obtain all digital marketing services to support their products and services. We are also proud of our excellence in the field of integrated advertising campaigns and achieving the best results with the help of a qualified team with experience and using the latest innovative marketing methods and tools.
                                 </p>
                               
