--- a/project photoshop.Eng.html
+++ b/project photoshop.Eng.html
@@ -250,7 +250,7 @@
                                         <ul style="padding:20px;text-align:center">
                                             <li style="font-size:20px;"><a target="_blank" href="https://mail.google.com/mail/u/0/#inbox"class="bi bi-google"></a></li>
                                             <li style="font-size:20px;"><a target="_blank" href="https://web.facebook.com/profile.php?id=61553920524111"class="bi bi-facebook"></a></li>
-                                            <li style="font-size:17px;"><a target="_blank" href="https://www.instagram.com/marketing.enigma/"class="bi bi-instagram"></a></li>
+                                            <li style="font-size:17px;"><a target="_blank" href="https://www.instagram.com/digitalmarketingpr_25/"class="bi bi-instagram"></a></li>
                                             <li style="font-size:17px;"><a target="_blank" href="https://wsend.co/201014194537"class="bi bi-whatsapp"></a></li>
                                             <li style="font-size:40px;"><a target="_blank" href="https://www.snapchat.com/add/marketing.43?share_id=X9hyQ7yJBgI&locale=ar-EG"class="fa fa-snapchat" aria-hidden="true"></a></li>
                                         </ul>
